add: hero section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,60 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="dist/styles/base.css" />
+    <link rel="stylesheet" href="dist/styles/module.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Disney+</title>
   </head>
-  <body></body>
+  <body>
+    <section class="hero">
+      <div class="hero__content">
+        <h1 class="hero__content__branding">
+          <img
+            class="hero__content__branding__img"
+            src="./dist/assets/images/disneyplus.svg"
+            alt="Disney+"
+          />
+        </h1>
+
+        <h3 class="title--small">As melhores histórias em um só lugar.</h3>
+
+        <p class="hero__content__paragraph">
+          <a href="#" class="link--text">Assinar o Disney+</a>
+          <br />
+          <span class="text--small">R$ 27,90/mês ou R$ 279,90 ano à vista</span>
+        </p>
+
+        <ul class="hero__content__combos">
+          <li class="hero__content__combos__combo">
+            <img
+              src="dist/assets/images/logos/disney_star_plus.png"
+              alt="Disney+ - Star+ - Combo"
+              class="hero__content__combos__combo__img"
+            />
+            <button type="button" class="hero__content__combos__combo__btn">
+              ASSINE AGORA
+            </button>
+            <span class="text">R$ 45,90/mês*</span>
+          </li>
+
+          <li class="hero__content__combos__combo">
+            <img
+              src="dist/assets/images/logos/disney_star_plus.png"
+              alt="Disney+ - Star+ - Combo"
+              class="hero__content__combos__combo__img"
+            />
+            <button type="button" class="hero__content__combos__combo__btn">
+              ASSINE AGORA
+            </button>
+            <span class="text">R$ 55,90/mês*</span>
+          </li>
+        </ul>
+
+        <p class="text--small hero__content__paragraph">
+          *O preço pode variar caso a assinatura seja feita através de outras
+          plataformas.
+        </p>
+      </div>
+    </section>
+  </body>
 </html>
