add: html and css

--- a/index.html
+++ b/index.html
@@ -27,14 +27,17 @@
           <span class="text--small">R$ 27,90/mês ou R$ 279,90 ano à vista</span>
         </p>
 
-        <ul class="hero__content__combos">
+        <ul class="hero__content__combos" style="list-style: none">
           <li class="hero__content__combos__combo">
             <img
               src="dist/assets/images/logos/disney_star_plus.png"
               alt="Disney+ - Star+ - Combo"
               class="hero__content__combos__combo__img"
             />
-            <button type="button" class="hero__content__combos__combo__btn">
+            <button
+              type="button"
+              class="hero__content__combos__combo__btn text--big"
+            >
               ASSINE AGORA
             </button>
             <span class="text">R$ 45,90/mês*</span>
@@ -46,7 +49,10 @@
               alt="Disney+ - Star+ - Combo"
               class="hero__content__combos__combo__img"
             />
-            <button type="button" class="hero__content__combos__combo__btn">
+            <button
+              type="button"
+              class="hero__content__combos__combo__btn text--big"
+            >
               ASSINE AGORA
             </button>
             <span class="text">R$ 55,90/mês*</span>
@@ -58,6 +64,59 @@
           plataformas.
         </p>
       </div>
+    </section>
+
+    <section class="shows">
+      <nav class="shows__tabs">
+        <button class="shows__tabs__btn shows__tabs__btn--is-active">
+          EM BREVE</button
+        ><button class="shows__tabs__btn">MAIS POPULARES</button
+        ><button class="shows__tabs__btn">MAIS NO STAR+</button>
+      </nav>
+      <ul class="shows__list">
+        <li class="shows__list__item">
+          <img
+            class="shows__list__item__img"
+            src="dist/assets/images/em_breve/spidey.jpg"
+            alt="Spidey"
+          />
+        </li>
+        <li class="shows__list__item">
+          <img
+            class="shows__list__item__img"
+            src="dist/assets/images/em_breve/desencantada.jpg"
+            alt="Desencantada"
+          />
+        </li>
+        <li class="shows__list__item">
+          <img
+            class="shows__list__item__img"
+            src="dist/assets/images/em_breve/lobisomem.jpg"
+            alt="Lobisomen"
+          />
+        </li>
+        <li class="shows__list__item">
+          <img
+            class="shows__list__item__img"
+            src="dist/assets/images/em_breve/sem_limites.jpg"
+            alt="Sem Limites"
+          />
+        </li>
+        <li class="shows__list__item">
+          <img
+            class="shows__list__item__img"
+            src="dist/assets/images/em_breve/the_santa_clauses.jpg"
+            alt="The Santa Clauses"
+          />
+        </li>
+        <li class="shows__list__item">
+          <img
+            class="shows__list__item__img"
+            src="dist/assets/images/em_breve/willow.jpg"
+            alt="Willow"
+          />
+        </li>
+      </ul>
     </section>
   </body>
 </html>
