add: watch-anywhere html and css

--- a/index.html
+++ b/index.html
@@ -271,6 +271,24 @@
       </p>
     </section>
 
+    <section class="watch-anywhere">
+      <img
+        class="watch-anywhere__img"
+        src="dist/assets/images/tv_pc_tablet_celular.png"
+        alt="Imagem com TV, Computador, Tablet e Celular"
+      />
+
+      <div class="watch-anywhere__div">
+        <h2 class="title watch-anywhere__div__title">Assista do seu jeito</h2>
+        <p class="text--big">
+          Aproveite a tela grande da TV ou assista no tablet, laptop, celular e
+          outros aparelhos. Nossa seleção de títulos em 4K não para de crescer.
+          Além disso, para a felicidade de todos, é possível assistir em até 4
+          telas ao mesmo tempo.
+        </p>
+      </div>
+    </section>
+
     <script src="src/script/main.js"></script>
   </body>
 </html>
