--- a/index.html
+++ b/index.html
@@ -271,15 +271,15 @@
       </p>
     </section>
 
-    <section class="watch-anywhere">
+    <section class="img-text-section">
       <img
-        class="watch-anywhere__img"
+        class="img-text-section__img"
         src="dist/assets/images/tv_pc_tablet_celular.png"
         alt="Imagem com TV, Computador, Tablet e Celular"
       />
 
-      <div class="watch-anywhere__div">
-        <h2 class="title watch-anywhere__div__title">Assista do seu jeito</h2>
+      <div class="img-text-section__div">
+        <h2 class="title img-text-section__div__title">Assista do seu jeito</h2>
         <p class="text--big">
           Aproveite a tela grande da TV ou assista no tablet, laptop, celular e
           outros aparelhos. Nossa seleção de títulos em 4K não para de crescer.
@@ -288,6 +288,192 @@
         </p>
       </div>
     </section>
+
+    <section class="img-text-section--img-full-width img-text-section">
+      <img
+        class="img-text-section--img-full-width"
+        src="dist/assets/images/fundo_rei_leao.png"
+        alt="Rei leão"
+      />
+
+      <div class="img-text-section--img-full-width__div">
+        <h2 class="title img-text-section__div__title">
+          Baixe filmes e séries
+        </h2>
+        <p class="text--big">
+          Baixe e assista quando e onde quiser. Assim, seus favoritos estão
+          sempre com você, até <br />
+          mesmo sem internet.
+        </p>
+      </div>
+    </section>
+
+    <section class="available-devices">
+      <h2 class="title available-devices__title">
+        Disponível nos seus dispositivos favoritos
+      </h2>
+
+      <ul class="available-devices__list">
+        <li class="available-devices__list__item">
+          <img
+            class="available-devices__list__item__img"
+            src="dist/assets/images/dispositivos/computador.png"
+            alt="Computador"
+          />
+          <h4 class="title--small">Computador</h4>
+          <ul class="text">
+            <li>Chrome OS</li>
+            <li>Mac Os</li>
+            <li>PC Windows</li>
+          </ul>
+        </li>
+
+        <li class="available-devices__list__item">
+          <img
+            class="available-devices__list__item__img"
+            src="dist/assets/images/dispositivos/tv.png"
+            alt="Computador"
+          />
+          <h4 class="title--small">Computador</h4>
+          <ul class="text">
+            <li>Chrome OS</li>
+            <li>Mac Os</li>
+            <li>PC Windows</li>
+          </ul>
+        </li>
+
+        <li class="available-devices__list__item">
+          <img
+            class="available-devices__list__item__img"
+            src="dist/assets/images/dispositivos/videogames.png"
+            alt="Computador"
+          />
+          <h4 class="title--small available-devices__list__item__h4">
+            Computador
+          </h4>
+          <ul class="text">
+            <li>Chrome OS</li>
+            <li>Mac Os</li>
+            <li>PC Windows</li>
+          </ul>
+        </li>
+
+        <li class="available-devices__list__item">
+          <img
+            class="available-devices__list__item__img"
+            src="dist/assets/images/dispositivos/celular.png"
+            alt="Computador"
+          />
+          <h4 class="title--small">Computador</h4>
+          <ul class="text">
+            <li>Chrome OS</li>
+            <li>Mac Os</li>
+            <li>PC Windows</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+
+    <section class="faq">
+      <h2 class="title faq__title">Perguntas frequentes</h2>
+
+      <ul class="faq__questions">
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            Pergunta?
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            A resposta né veinho
+          </div>
+        </li>
+      </ul>
+
+      <ul class="faq__questions">
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            Pergunta?
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            A resposta né veinho
+          </div>
+        </li>
+      </ul>
+
+      <ul class="faq__questions">
+        <li class="faq__questions__item">
+          <div class="faq__questions__item__question" data-faq-question>
+            Pergunta?
+          </div>
+          <div class="faq__questions__item__answer text--big">
+            A resposta né veinho
+          </div>
+        </li>
+      </ul>
+    </section>
+
+    <footer class="footer">
+      <div class="footer__container">
+        <img
+          class="footer__logo"
+          src="dist/assets/images/disneyplus.svg"
+          alt="Disney+"
+        />
+        <ul class="footer__links">
+          <li class="footer__links__item">
+            <div class="language-selector">
+              <img
+                src="./dist/assets/images/icones/globe.svg"
+                alt="Globo do mundo"
+              />
+              <select>
+                <option>English</option>
+                <option selected>Português</option>
+              </select>
+            </div>
+          </li>
+
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Termos e Condições de Uso</a>
+          </li>
+
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Política de privacidade</a>
+          </li>
+
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Proteção de Dados no Brasil</a>
+          </li>
+
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Anúncios personalizados</a>
+          </li>
+
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Dispositivos compatíveis</a>
+          </li>
+
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Ajuda</a>
+          </li>
+
+          <li class="footer__links__item">
+            <a href="#" class="text--small">Sobre o Disney+</a>
+          </li>
+        </ul>
+        <p class="text--small">
+          ® 2023 Disney, Disney+ e The Walt Disney Company. Todos os direitos
+          reservados. Serviço de assinatura paga. Conteúdo sujeito a
+          disponibilidade.
+        </p>
+        <p class="text--small">
+          Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e
+          condições. O serviço Disney+ é comercializado por The Walt Disney
+          Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas,
+          12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil
+          e CNPJ/M 73.042.962/0004-20
+        </p>
+      </div>
+    </footer>
 
     <script src="src/script/main.js"></script>
   </body>
