--- a/index.html
+++ b/index.html
@@ -9,15 +9,38 @@
     <title>Disney+</title>
   </head>
   <body>
+    <header class="header header--is-hidden">
+      <div class="header__container">
+        <h1>
+          <img
+            class="header__logo"
+            src="./dist/assets/images/disneyplus.svg"
+            alt="Disney+"
+          />
+        </h1>
+
+        <ul class="header__link">
+          <li class="header__link__item">
+            <a href="#" class="btn btn--secondary btn--no-border"
+              >ASSINE AGORA</a
+            >
+          </li>
+          <li class="header__link__item">
+            <a href="#" class="btn btn--dark">ENTRAR</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+
     <section class="hero">
       <div class="hero__content">
-        <h1 class="hero__content__branding">
+        <div class="hero__content__branding">
           <img
             class="hero__content__branding__img"
             src="./dist/assets/images/disneyplus.svg"
             alt="Disney+"
           />
-        </h1>
+        </div>
 
         <h3 class="title--small">As melhores histórias em um só lugar.</h3>
 
